@@ -600,22 +600,23 @@ $(LIBOBJDIR)/scip/scipdefplugins.o: src/scip/scipdefplugins.c \
   src/scip/cons_linear.h src/scip/cons_logicor.h src/scip/cons_or.h \
   src/scip/cons_setppc.h src/scip/cons_varbound.h src/scip/cons_xor.h \
   src/scip/dialog_default.h src/scip/disp_default.h \
-  src/scip/heur_coefdiving.h src/scip/heur_feaspump.h \
-  src/scip/heur_fixandinfer.h src/scip/heur_fracdiving.h \
-  src/scip/heur_guideddiving.h src/scip/heur_intdiving.h \
-  src/scip/heur_linesearchdiving.h src/scip/heur_localbranching.h \
-  src/scip/heur_objpscostdiving.h src/scip/heur_octane.h \
-  src/scip/heur_pscostdiving.h src/scip/heur_rins.h \
-  src/scip/heur_rootsoldiving.h src/scip/heur_rounding.h \
-  src/scip/heur_simplerounding.h src/scip/nodesel_bfs.h \
-  src/scip/nodesel_dfs.h src/scip/nodesel_restartdfs.h \
-  src/scip/presol_dualfix.h src/scip/presol_implics.h \
-  src/scip/presol_probing.h src/scip/presol_trivial.h \
-  src/scip/prop_pseudoobj.h src/scip/reader_cnf.h src/scip/reader_lp.h \
-  src/scip/reader_mps.h src/scip/reader_zpl.h src/scip/sepa_clique.h \
-  src/scip/sepa_cmir.h src/scip/sepa_gomory.h \
-  src/scip/sepa_impliedbounds.h src/scip/sepa_intobj.h \
-  src/scip/sepa_strongcg.h src/scip/scipdefplugins.h src/scip/debug.h
+  src/scip/heur_coefdiving.h src/scip/heur_crossover.h \
+  src/scip/heur_feaspump.h src/scip/heur_fixandinfer.h \
+  src/scip/heur_fracdiving.h src/scip/heur_guideddiving.h \
+  src/scip/heur_intdiving.h src/scip/heur_linesearchdiving.h \
+  src/scip/heur_localbranching.h src/scip/heur_objpscostdiving.h \
+  src/scip/heur_octane.h src/scip/heur_pscostdiving.h \
+  src/scip/heur_rins.h src/scip/heur_rootsoldiving.h \
+  src/scip/heur_rounding.h src/scip/heur_simplerounding.h \
+  src/scip/nodesel_bfs.h src/scip/nodesel_dfs.h \
+  src/scip/nodesel_restartdfs.h src/scip/presol_dualfix.h \
+  src/scip/presol_implics.h src/scip/presol_probing.h \
+  src/scip/presol_trivial.h src/scip/prop_pseudoobj.h \
+  src/scip/reader_cnf.h src/scip/reader_lp.h src/scip/reader_mps.h \
+  src/scip/reader_zpl.h src/scip/sepa_clique.h src/scip/sepa_cmir.h \
+  src/scip/sepa_gomory.h src/scip/sepa_impliedbounds.h \
+  src/scip/sepa_intobj.h src/scip/sepa_strongcg.h \
+  src/scip/scipdefplugins.h src/scip/debug.h
 $(LIBOBJDIR)/scip/sepa.o: src/scip/sepa.c src/scip/def.h src/scip/type_retcode.h \
   src/scip/message.h src/scip/type_message.h src/scip/struct_message.h \
   src/scip/pub_message.h src/scip/set.h src/blockmemshell/memory.h \
@@ -1353,6 +1354,30 @@ $(LIBOBJDIR)/scip/heur_coefdiving.o: src/scip/heur_coefdiving.c src/scip/heur_co
   src/scip/pub_reader.h src/scip/pub_relax.h src/scip/pub_sepa.h \
   src/scip/pub_prop.h src/scip/pub_sol.h src/scip/pub_tree.h \
   src/scip/pub_var.h src/scip/type_history.h src/scip/lpi.h
+$(LIBOBJDIR)/scip/heur_crossover.o: src/scip/heur_crossover.c src/scip/scip.h \
+  src/scip/def.h src/scip/type_retcode.h src/scip/message.h \
+  src/scip/type_message.h src/scip/struct_message.h \
+  src/scip/pub_message.h src/blockmemshell/memory.h \
+  src/scip/type_result.h src/scip/type_clock.h src/scip/type_misc.h \
+  src/scip/type_paramset.h src/scip/type_scip.h src/scip/type_event.h \
+  src/scip/type_lp.h src/scip/type_var.h src/scip/type_prob.h \
+  src/scip/type_tree.h src/scip/type_branch.h src/scip/type_conflict.h \
+  src/scip/type_cons.h src/scip/type_sol.h src/scip/type_dialog.h \
+  src/scip/type_disp.h src/scip/type_heur.h src/scip/type_nodesel.h \
+  src/scip/type_presol.h src/scip/type_pricer.h src/scip/type_reader.h \
+  src/scip/type_relax.h src/scip/type_sepa.h src/scip/type_prop.h \
+  src/scip/pub_branch.h src/scip/pub_conflict.h src/scip/pub_cons.h \
+  src/scip/pub_cutpool.h src/scip/type_cutpool.h src/scip/pub_dialog.h \
+  src/scip/pub_disp.h src/scip/pub_event.h src/scip/pub_fileio.h \
+  src/scip/pub_heur.h src/scip/pub_implics.h src/scip/type_implics.h \
+  src/scip/pub_lp.h src/scip/type_set.h src/scip/type_stat.h \
+  src/scip/type_lpi.h src/scip/pub_misc.h src/scip/pub_nodesel.h \
+  src/scip/pub_paramset.h src/scip/pub_presol.h src/scip/pub_pricer.h \
+  src/scip/pub_reader.h src/scip/pub_relax.h src/scip/pub_sepa.h \
+  src/scip/pub_prop.h src/scip/pub_sol.h src/scip/pub_tree.h \
+  src/scip/pub_var.h src/scip/type_history.h src/scip/lpi.h \
+  src/scip/scipdefplugins.h src/scip/cons_linear.h \
+  src/scip/heur_crossover.h
 $(LIBOBJDIR)/scip/heur_feaspump.o: src/scip/heur_feaspump.c src/scip/heur_feaspump.h \
   src/scip/scip.h src/scip/def.h src/scip/type_retcode.h \
   src/scip/message.h src/scip/type_message.h src/scip/struct_message.h \
